# Course_work_4

./: README.md  main.py  pyproject.toml
src/: api.py  json_manager.py  methods.py  utils.py  vacancy.py
